# option6

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  option6.py  option6.service  pyproject.toml
.github/workflows/: test.yml
option6/: __init__.py  __main__.py  turtle.py  wolfram_alpha.py
option6/helpers/: messageHandler.py  messagePublisher.py  message_handler.py  message_publisher.py
tests/: __init__.py  conftest.py  test_bot.py  test_commands.py  test_entrypoint.py  test_main.py  test_message_handler.py  test_misc.py  test_turtle.py
