[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "option6"
author = "Edward Knight"
author-email = "edw@rdknig.ht"
home-page = "https://github.com/Edward-Knight/option6"
description-file = "README.md"
requires-python = "~= 3.7"
requires = [
    "dill ~= 0.3.0",
    "discord.py ~= 1.7.0",
    "pillow ~= 8.0",
    "wolframalpha ~= 5.0",
    "xvfbwrapper ~= 0.0; sys_platform == 'linux'",
]
classifiers = ["License :: OSI Approved :: MIT License"]

[tool.flit.scripts]
option6 = "option6.__main__:main"

[tool.flit.metadata.requires-extra]
test = [
    "dpytest ~= 0.5.0",
    "pytest ~= 6.0",
    "pytest-asyncio ~= 0.0",
    "pytest-cov ~= 2.0",
]

dev = [
    "pre-commit",
    "wheel",
]

[tool.black]
line-length = 100

[tool.coverage.run]
branch = true
omit = ["/private/*", "/tmp/*"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pylint.messages_control]
disable = "C0330, C0326, C0116, W0612"

[tool.pylint.format]
max-line-length = 120

[tool.pytest.ini_options]
addopts = "--doctest-modules --cov option6 --cov-config pyproject.toml"
log_file_level = "DEBUG"
junit_family = "xunit2"
required_plugins = "pytest-asyncio pytest-cov"
xfail_strict = true
